added swagger 2 downdaraded spring boot to resolve issue with bean 'documentationPluginsBootstrapper'